# cmux-home

./: AGENTS.md  Cargo.toml  README.md
docs/: customization.md  events.md
ink/: README.md  package.json  tsconfig.json
ink/src/: App.tsx  Composer.tsx  HelpBar.tsx  WorkspaceList.tsx  agent-commands.ts  client.ts  cmux-ssh.ts  cmux-ws.ts  composer-state.ts  format.ts  freestyle-client.ts  index.tsx  types.ts
scripts/: cmux-home.sh
skills/cmux-home/: SKILL.md
skills/cmux-home/agents/: openai.yaml
src/: cmux_client.rs  commands.rs  config.rs  events.rs  main.rs  model.rs  skills.rs  util.rs
