[package]
name = "cmux-home"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
ignore = "0.4"
nucleo-matcher = "0.3"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-textarea = { version = "0.7", features = ["crossterm"] }
